fixed gap for mobile

--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -26,6 +26,7 @@
 
   &--image {
     @include useGrid(2);
+    gap: 20px;
     margin-bottom: 16px;
   }
 }
